corrijo errores generados

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "my-element.js",
   "type": "module",
   "scripts": {
+    "start": "browser-sync start --server --serveStatic 'docs' --files '*/.html, */.css'",
     "build": "echo \"This is not a TypeScript project, so no need to build.\"",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint '**/*.js'",
